[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "psycho-portal"
version = "0.1.0"
description = "Self-evolving AI personal assistant with persistent knowledge graph"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

[project.scripts]
psycho = "main:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["psycho*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
